--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <!-- Preconnect to AdSense -->
     <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin />
     <link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin />
+    <meta name="google-site-verification" content="_NObUQI8I6NzLw9YuklTKmLt1XXbXBDuPLj5ZBQNV3c" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
